--- a/index.html
+++ b/index.html
@@ -35,12 +35,105 @@
     </style>
       <style>
         .bismillah {
-            position: relative; /* Membuat gambar posisi absolut */
-            top: 70%; /* Memindahkan ke titik tengah vertikal kontainer */
-            right: 15px;
-            transform: translateY(-50%); /* Menggeser gambar setengah tingginya ke atas */
-            width: 350px;
+          margin: auto; /* Atur margin secara otomatis di atas dan bawah, membuat form berada di tengah */
+    max-width: 300px; /* Atur lebar maksimum agar form tidak terlalu lebar */
         }
+
+        #card {
+    margin: auto; /* Atur margin secara otomatis di atas dan bawah, membuat form berada di tengah */
+    max-width: 250px; /* Atur lebar maksimum agar form tidak terlalu lebar */
+  }
+
+.overflow-x-hidden {
+  overflow-x: hidden; /* Mengatasi scroll horizontal jika ada */
+}
+
+/* Gaya untuk kartu */
+
+
+.card-body img {
+  display: block;
+  margin: 0 auto;
+  width: 150px;
+  height: auto;
+  border-radius: 0.5rem;
+}
+
+.card-text {
+  font-size: 1rem;
+}
+
+/* Gaya untuk tombol Salin No. Rekening */
+.btn-light {
+  background-color: #f8f9fa;
+  color: #212529;
+  border-color: #000000;
+  border-radius: 0.5rem;
+  padding: 0.375rem 0.75rem;
+  font-size: 0.9rem;
+  transition: all 0.3s ease;
+}
+
+.btn-light:hover {
+  background-color: #000000;
+  color: #212529;
+  border-color: #e2e6ea;
+}
+
+.btn-light:focus {
+  box-shadow: 0 0 0 0.25rem rgba(248, 249, 250, 0.5);
+}
+
+#my-form {
+    margin: auto; /* Atur margin secara otomatis di atas dan bawah, membuat form berada di tengah */
+    max-width: 800px; /* Atur lebar maksimum agar form tidak terlalu lebar */
+  }
+	
+    /* Memberi warna terang pada label */
+    .form-label {
+		position: relative;
+		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #060606; /* Warna label */
+        font-weight: bold; /* Ketebalan font label */
+        font-size: 14px; /* Ukuran font label */
+    }
+
+    /* Ubah gaya input */
+    .form-control {
+		position: relative;
+		width: 100%;
+		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+		font-weight: bold; /* Ketebalan font label */
+        background-color: #f9f9f9; /* Warna latar belakang input */
+        color: #171616; /* Warna teks input */
+        border-color: #ccc; /* Warna border input */
+        border-radius: 5px; /* Sudut border input */
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Font input */
+    }
+
+
+	/* Style form-select */
+.form-select {
+	position: relative;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+		font-weight: bold; /* Ketebalan font label */
+    width: 90%;
+    padding: 10px;
+    border: 1px solid #ced4da;
+    border-radius: 5px;
+    background-color: #fff;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-chevron-down' viewBox='0 0 16 16'%3E%3Cpath d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: auto 24px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+.btn {
+  position: relative;
+}
     </style>
     <title>Wedding of Cowok & Cewek</title>
   </head>
@@ -134,9 +227,11 @@
     <!-- About start -->
     <main>
     <section class="card-a" id="about">
-      <div class="container">
+      <div class="container text-center">
         <div class="row text-center mb-3">
           <div data-aos="fade-up" data-aos-easing="linear">
+            <br>
+            <br>
             <img src="./img/bismillah.png" class="bismillah has-text-centered" alt="Bismillahirrahmaanirrahiim" width="400" height="100">
           </div>
         </div>
@@ -150,10 +245,10 @@
     </section>
     <!-- About end -->
     <!-- Jumbotron start -->
-    <section class="jumbotron text-center card mpl" id="fh5co-couple">
+    <section class="jumbotron text-center card" id="mpw">
       <div class="container">
         <div class="row justify-content-around">
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4">
             <img src="./img/cowok123.jpg"/>
             <h1 class="display-12 text-center">Nama Cowok</h1>
             <h2 class="fs-5">Putra Pertama dari pasangan</h2>
@@ -191,7 +286,7 @@
         <div class="row justify-content-center text-center">
           <div class="col-md-6 mt-3">
             <p class="fs-5">Merupakan suatu kehormatan dan kebahagiaan bagi kami sekeluarga, apabila Bapak/Ibu/Saudara/i berkenan hadir dan memberikan doa restu pada :</p>
-            <i class="bi bi-calendar-heart" style="font-size: 4rem;"></i>
+            <i class="bi bi-calendar-heart" style="font-size: 4rem; color: deeppink;"></i>
             <p class="fs-5">Kamis, 09 September 2023</p>
             <p class="fs-5">Jam 15.00 - 19.00 WIB</p>
             <p class="fs-5">Alamat Lengkap Lokasi</p>
@@ -360,7 +455,7 @@
   <section id="fh5co-testimonial" class="card">
     <div class="row justify-content-center">
       <div class="col-md-8 col-10 text-center">
-        <h2>Konfirmasi Kehadiran</h2>
+        <h1>Konfirmasi Kehadiran</h1>
         <p>Isi form di bawah ini untuk melakukan konfirmasi kehadiran.</p>
       </div>
     </div>
@@ -384,14 +479,14 @@
         <div class="mb-3">
           <label for="kehadiran" class="form-label">Kehadiran</label>
           <select name="kehadiran" id="kehadiran" class="form-select">
-            <option selected>Pilih salah satu</option>
+            <option selected>Pilih</option>
             <option value="Hadir">Hadir</option>
             <option value="Tidak Hadir">Tidak Hadir</option>
           </select>
         </div>
       </div>
       <div class="col-12" style="margin-top: 35px;">
-        <button class="btn btn-primary">Kirim</button>
+        <button class="btn btn-warning">Kirim</button>
       </div>
   <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,256L1440,192L1440,320L0,320Z"></path></svg> -->
 </section>
@@ -418,7 +513,7 @@
                           <p class="card-text" style="font-size: 0.9rem;">a.n Lorem ipsum dolor</p>
 
                           <!-- Ubah juga data-nomer sesuai dengan no rekening -->
-                          <button class="btn btn-light btn-sm rounded-3" data-nomer="123456789" onclick="util.salin(this)" autofocus>Salin No. Rekening</button>
+                          <a class="btn btn-warning btn-sm rounded-3" data-nomer="123456789" onclick="util.salin(this)" autofocus>Salin No. Rekening</a>
                       </div>
 
                       <div class="col-12 card-body border rounded-4 shadow p-3 m-3" style="max-width: 25rem;" data-aos="fade-down" data-aos-duration="1500">
@@ -428,7 +523,7 @@
                           <p class="card-text" style="font-size: 0.9rem;">a.n Lorem ipsum dolor</p>
 
                           <!-- Ubah juga data-nomer sesuai dengan no rekening -->
-                          <button class="btn btn-light btn-sm rounded-3" data-nomer="123456789" onclick="util.salin(this)" autofocus>Salin No. Rekening</button>
+                          <a class="btn btn-warning btn-sm rounded-3" data-nomer="123456789" onclick="util.salin(this)" autofocus>Salin No. Rekening</a>
                       </div>
                   </div>
               </div>
@@ -442,7 +537,7 @@
 
     <!-- Pesan dan Doa -->
     <section id="pesan" class="card">
-      <div class="container col-md-6">
+      <div class="container col-md-6 text-center">
         <div class="row text-center mb-3 mt-3">
           <div class="col">
             <h1>Terima Kasih</h1>
@@ -492,7 +587,8 @@
                   <h3 id="yth"></h3>
                     <h3 id="to"></h3>
                     <h1 id="invite" style="font-size: x-small; padding-left: 20px; padding-right: 20px">Tanpa mengurangi rasa hormat, Kami turut mengundang Anda untuk hadir pada acara pernikahan Kami.</h1>
-              <a style="color: #e8ebee; box-sizing: border-box; box-shadow: 4px 4px 11px #caced1,-4px -4px 11px white;
+              
+              <a  style="color: #e8ebee; box-sizing: border-box; box-shadow: 4px 4px 11px #caced1,-4px -4px 11px white;
               font-weight: bold; padding: 8px; background-color: #ec7272; border: 0ch; border-radius: 5px;" onclick="closeWelcomeModal()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-heart" viewBox="0 0 16 16">
                   <path
@@ -562,6 +658,10 @@ if (element) {
   });
 }
 }
+</script>
+
+<script>
+  
 </script>
   </body>
 </html>
